# Auto-Gemini-CLI

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  KANBAN.md  MATHEMATICS.md  Makefile  PatronsArchitecture.md  Planning.md  README.md  amelioration.md  binet_accuracy_chart.html  build_error.txt  cmd_monitor.go  cmd_producer.go  cmd_tracker.go  complexity_chart.html  constants.go  go.mod  golden_ratio_chart.html  log_monitor.go  log_monitor_test.go  models.go  order.go  order_test.go  producer.go  producer_test.go  profiler_output.txt  settings_list.txt  start.sh  stop.sh  tracker.go  tracker_test.go  user_path.txt
.github/workflows/: benchmark.yml  rust-check.yml
Exigences/: Auto-Gemini CLI Spec.docx  Faisabilité.md  Planification-Execution.md  Scénarios Candidats Implémentation.md
Requirements/: Planification Adaptation Auto-Claude.md  Planification Développement From Scratch.md  README.md
crates/fib-cli/: Cargo.toml
crates/fib-cli/src/: main.rs
crates/fib-cli/src/commands/: bench.rs  binet_analysis.rs  calc.rs  compare.rs  compare_go.rs  info.rs  memory.rs  mod.rs  sequence.rs
crates/fib-cli/tests/: integration_tests.rs
crates/fib-core/: Cargo.toml  README.md
crates/fib-core/benches/: fib_benchmarks.rs
crates/fib-core/src/: allocator.rs  closed_form.rs  iterative.rs  lib.rs  matrix.rs  memory.rs  recursive.rs
crates/fib-go/src/: lib.rs
crates/fib-profiler/: Cargo.toml
crates/fib-profiler/src/: main.rs
crates/fib-viz/: Cargo.toml
crates/fib-viz/src/: chart_generator.rs  data_parser.rs  main.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  MANUAL.md  PLANNING.md  Planification-Execution-Scenario-2.docx  Specification Produit Auto-Claude.docx  announcement_rust.md  produit-auto-gemini-cli.md
docs/usage/: getting_started.md
public/: binet_accuracy_chart.html  complexity_chart.html  index.html
public/simd-demo/: index.html  style.css
reports/2026-01-03_17-19-46/: report.js
reports/2026-01-03_17-22-57/: report.html
reports/2026-01-03_17-24-59/: report.html  report.js
reports/2026-01-03_17-36-26/: report.html
reports/2026-01-03_17-36-45/: report.html
reports/2026-01-03_17-36-45/criterion/: index.html
scripts/: generate_report.ps1
simd-demo/: app.js
templates/: report.html  report.js
