[package]
name = "fib-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Fibonacci Benchmark Suite"
documentation = "https://docs.rs/fib-cli"
homepage = "https://github.com/agbru/FibBenchmark"
readme = "../../README.md"
keywords = ["fibonacci", "cli", "benchmark"]
categories = ["command-line-utilities"]

[[bin]]
name = "fib-bench"
path = "src/main.rs"

[dependencies]
fib-core = { path = "../fib-core" }
fib-viz = { path = "../fib-viz" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
