[package]
name = "fib-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Visualization and chart generation for Fibonacci benchmark results"
keywords = ["fibonacci", "visualization", "charts", "plotly"]
categories = ["visualization"]

[[bin]]
name = "fib-viz"
path = "src/main.rs"

[dependencies]
fib-core = { path = "../fib-core" }
plotly = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
